--- a/.htaccess
+++ b/.htaccess
@@ -7,3 +7,9 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
 </IfModule>
 
+## SITE REFERRER BANNING
+RewriteCond %{HTTP_REFERER} semalt.com [NC,OR]
+RewriteCond %{HTTP_REFERER} buttons-for-website.com [NC,OR]
+RewriteCond %{HTTP_REFERER} seoanalyses.com [NC]
+RewriteRule .* - [F]
+
